Minor tweaks and fixes such as footer on mobile device. Displays full name in wider displays and my short name on smaller displays. Moved Header from above profile picture to within text section.

--- a/styles.css
+++ b/styles.css
@@ -41,13 +41,6 @@ header {
     background-image: linear-gradient(to right, #946f00, #e9c351);
     opacity: 0.8;
     z-index: -1;
-    animation: gradientAnimation 20s ease infinite;
-}
-
-@keyframes gradientAnimation {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
 }
 
 nav {
@@ -77,10 +70,14 @@ nav {
     margin: 0px;
   }
 
-  .logo {
+  .logo-full {
     font-size: 24px;
     color: #fff;
     font-weight: bold;
+  }
+
+  .logo-short {
+    display: none;
   }
   
   .navigation {
@@ -110,10 +107,10 @@ nav {
     position: fixed;
     top: 60px;
     height: calc(100vh - 60px);
-    overflow-y: auto;
     padding: 0px;
     width: 100%;
     margin: 0;
+    overflow-y: auto;
   }
   
   /* Profile Picture Styles */
@@ -127,14 +124,20 @@ nav {
     margin: 0px 0px 20px 0px;
   }
 
-  h1 {
-    display: none;
-  }
-
   .headshot {
     width: 80px;
     height: auto;
     border-radius: 50%;
+    /* animation: rotateAnimation 5s linear infinite;     */
+  }
+
+  @keyframes rotateAnimation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 
   details {
@@ -218,6 +221,7 @@ nav {
     background-color: #fff;
     top: 60px;
     bottom: 140px;
+    /* overflow-y: auto; */
   }
 
   .expand-button {
@@ -376,22 +380,35 @@ nav {
       display: none;
     }
 
+    .underheader {
+        overflow-y: initial;
+      }
+
+      @keyframes moveUpDown {
+        0% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(55%);
+        }
+        100% {
+          transform: translateY(0);
+        }
+      }
+
     .profile-picture {
         position: sticky;
         width: 200px;
-        height: auto;
+        height: 100%;
         margin: 0;
-        /* background: linear-gradient(to bottom, #946f00, #666); */
         border-radius: initial;
         padding: 0 10px 0 10px;
+        /* animation: moveUpDown 3s ease-in-out infinite alternate;         */
     }
     .headshot {
         width: 200px;
         height: auto;
       }
-    h1 {
-        display: block;
-    }
     .section {
         position: fixed;
         top: 60px;
@@ -407,9 +424,15 @@ nav {
   }
 
 @media screen and (max-width: 325px) {
-    .logo {
+    .logo-full {
         display: none;
     }
+    .logo-short {
+        display: initial;
+        font-size: 24px;
+        color: #fff;
+        font-weight: bold;
+      }
 }
 /* Existing CSS */
 
